# weather-forecast

./: .env  Dockerfile  README.md  compose.yml  pyproject.toml  sample_request.py
src/src/: settings.py  urls.py
src/weather_forecast/: __init__.py  models.py  services.py  urls.py
src/weather_forecast/api/v1/: serializers.py  views.py
src/weather_forecast/tests/: conftest.py  test_services.py
